Subir tabla a bigquery

--- a/Clean file and upload.ipynb
+++ b/Clean file and upload.ipynb
@@ -564,7 +564,7 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -576,7 +576,7 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -588,7 +588,7 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -600,7 +600,7 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -612,7 +612,7 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -627,11 +627,11 @@
        "4  2017  December             1        00:00  prospecting      NaN   \n",
        "\n",
        "  disposition   fulldate                  MST_Time  \n",
-       "0       Email 2017-12-01 2017-12-01 00:00:00-07:00  \n",
-       "1       Email 2017-12-01 2017-12-01 00:00:00-07:00  \n",
-       "2       Email 2017-12-01 2017-12-01 00:00:00-07:00  \n",
-       "3       Email 2017-12-01 2017-12-01 00:00:00-07:00  \n",
-       "4       Email 2017-12-01 2017-12-01 00:00:00-07:00  "
+       "0       Email 2017-12-01 2017-11-30 22:00:00-07:00  \n",
+       "1       Email 2017-12-01 2017-11-30 22:00:00-07:00  \n",
+       "2       Email 2017-12-01 2017-11-30 22:00:00-07:00  \n",
+       "3       Email 2017-12-01 2017-11-30 22:00:00-07:00  \n",
+       "4       Email 2017-12-01 2017-11-30 22:00:00-07:00  "
       ]
      },
      "execution_count": 9,
@@ -641,7 +641,7 @@
    ],
    "source": [
     "def converter_MST(row):\n",
-    "    return row['fulldate'].tz_localize('US/Mountain').tz_convert('US/Mountain')\n",
+    "    return row['fulldate'].tz_localize('US/Eastern').tz_convert('US/Mountain')\n",
     "\n",
     "#Creando la fecha con Timezone MST\n",
     "df['MST_Time'] = df.apply(converter_MST, axis=1)\n",
@@ -697,8 +697,8 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
-       "      <td>2017-12-01 07:00:00+00:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
+       "      <td>2017-12-01 05:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -710,8 +710,8 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
-       "      <td>2017-12-01 07:00:00+00:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
+       "      <td>2017-12-01 05:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -723,8 +723,8 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
-       "      <td>2017-12-01 07:00:00+00:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
+       "      <td>2017-12-01 05:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -736,8 +736,8 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
-       "      <td>2017-12-01 07:00:00+00:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
+       "      <td>2017-12-01 05:00:00+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -749,8 +749,8 @@
        "      <td>NaN</td>\n",
        "      <td>Email</td>\n",
        "      <td>2017-12-01</td>\n",
-       "      <td>2017-12-01 00:00:00-07:00</td>\n",
-       "      <td>2017-12-01 07:00:00+00:00</td>\n",
+       "      <td>2017-11-30 22:00:00-07:00</td>\n",
+       "      <td>2017-12-01 05:00:00+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -765,11 +765,11 @@
        "4  2017  December             1        00:00  prospecting      NaN   \n",
        "\n",
        "  disposition   fulldate                  MST_Time                  UTC_Time  \n",
-       "0       Email 2017-12-01 2017-12-01 00:00:00-07:00 2017-12-01 07:00:00+00:00  \n",
-       "1       Email 2017-12-01 2017-12-01 00:00:00-07:00 2017-12-01 07:00:00+00:00  \n",
-       "2       Email 2017-12-01 2017-12-01 00:00:00-07:00 2017-12-01 07:00:00+00:00  \n",
-       "3       Email 2017-12-01 2017-12-01 00:00:00-07:00 2017-12-01 07:00:00+00:00  \n",
-       "4       Email 2017-12-01 2017-12-01 00:00:00-07:00 2017-12-01 07:00:00+00:00  "
+       "0       Email 2017-12-01 2017-11-30 22:00:00-07:00 2017-12-01 05:00:00+00:00  \n",
+       "1       Email 2017-12-01 2017-11-30 22:00:00-07:00 2017-12-01 05:00:00+00:00  \n",
+       "2       Email 2017-12-01 2017-11-30 22:00:00-07:00 2017-12-01 05:00:00+00:00  \n",
+       "3       Email 2017-12-01 2017-11-30 22:00:00-07:00 2017-12-01 05:00:00+00:00  \n",
+       "4       Email 2017-12-01 2017-11-30 22:00:00-07:00 2017-12-01 05:00:00+00:00  "
       ]
      },
      "execution_count": 10,
@@ -779,7 +779,7 @@
    ],
    "source": [
     "def converter_UTC(row):\n",
-    "    return row['fulldate'].tz_localize('US/Mountain').tz_convert('UTC')\n",
+    "    return row['fulldate'].tz_localize('US/Eastern').tz_convert('UTC')\n",
     "\n",
     "#Creando la fecha con Timezone UTC\n",
     "df['UTC_Time'] = df.apply(converter_UTC, axis=1)\n",
@@ -816,6 +816,51 @@
    "source": [
     "#Verificando los tipos de datos\n",
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subiendo el dataframe como una tabla a BigQuery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import bigquery\n",
+    "\n",
+    "#import os\n",
+    "#os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<google.cloud.bigquery.job.LoadJob at 0x14e15eb9e10>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client = bigquery.Client()\n",
+    "dataset_ref = client.dataset('test_data')\n",
+    "table_ref = dataset_ref.table('calls')\n",
+    "\n",
+    "client.load_table_from_dataframe(df, table_ref).result()"
    ]
   }
  ],
